Added note about GRADLE_OPTS to Readme